--- a/app/src/main/res/layout/activity_anuncio.xml
+++ b/app/src/main/res/layout/activity_anuncio.xml
@@ -19,18 +19,18 @@
     <LinearLayout
         android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="150dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:id="@+id/imgItemDetail"
+            android:id="@+id/anuncioFoto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:contentDescription="TODO"
-            tools:src="@drawable/hotel_campomar" />
+            tools:src="@drawable/hotel" />
 
     </LinearLayout>
 
@@ -38,7 +38,7 @@
         android:id="@+id/tvTituloAnuncio"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="8dp"
         android:text="@string/nombre_anuncio"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -50,7 +50,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="510dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="18dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -76,27 +76,6 @@
                     android:textStyle="bold"
                     android:text="@string/informacion" />
 
-                <LinearLayout
-                    android:layout_marginTop="5dp"
-                    android:layout_width="120dp"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/telefono"
-                        android:layout_marginTop="1dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="615079123" />
-                    <ImageView
-                        android:id="@+id/imageView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        app:srcCompat="@drawable/ic_telefono" />
-
-                </LinearLayout>
-
                 <TextView
                     android:id="@+id/tvDescripcionDetail"
                     android:layout_width="320dp"
@@ -109,12 +88,37 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tvTituloAnuncio" />
 
+                <LinearLayout
+                    android:layout_marginTop="5dp"
+                    android:layout_width="120dp"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_marginStart="20dp"
+                        android:id="@+id/telefono"
+                        android:layout_marginTop="1dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="615079123" />
+                    <ImageView
+                        android:layout_marginStart="3dp"
+                        android:id="@+id/imageView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+
+                        app:srcCompat="@drawable/ic_telefono" />
+
+                </LinearLayout>
+
                 <TextView
                     android:id="@+id/textView4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="18sp"
                     android:textStyle="bold"
+                    android:layout_marginTop="12dp"
                     android:text="@string/comentarios" />
 
                 <androidx.recyclerview.widget.RecyclerView
