--- a/app/src/main/res/layout/cardviewanu.xml
+++ b/app/src/main/res/layout/cardviewanu.xml
@@ -26,7 +26,7 @@
                 android:layout_width="75dp"
                 android:layout_height="75dp"
                 android:layout_marginStart="20dp"
-                app:srcCompat="@drawable/hotel_campomar"
+                app:srcCompat="@drawable/hotel"
                 tools:ignore="VectorDrawableCompat"
                 />
             <LinearLayout
