--- a/app/src/main/res/layout/cardviewcat.xml
+++ b/app/src/main/res/layout/cardviewcat.xml
@@ -9,7 +9,7 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/cvCat"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="90dp"
         android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -39,6 +39,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
                     android:layout_weight="1"
+                    android:layout_marginTop="5dp"
                     android:text="TextView"
                     android:textColor="#000"
                     android:textSize="22sp"
@@ -46,12 +47,12 @@
 
                 <TextView
                     android:id="@+id/descripcionCat"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="15dp"
+                    android:layout_width="290dp"
+                    android:layout_height="50dp"
                     android:layout_marginStart="10dp"
+                    android:layout_marginTop="1dp"
+                    android:layout_marginBottom="1dp"
                     android:layout_weight="1"
-                    android:layout_marginBottom="10dp"
                     android:text="Descripcion"
                     android:textSize="18sp" />
             </LinearLayout>
