--- a/app/src/main/res/layout/activity_lista_cat.xml
+++ b/app/src/main/res/layout/activity_lista_cat.xml
@@ -12,8 +12,8 @@
         android:layout_width="179dp"
         android:layout_height="48dp"
         android:fontFamily="@font/akaya_kanadaka_regular"
-        android:text="@string/listaCategorias"
         android:gravity="center"
+        android:text="@string/listaCategorias"
         android:textAllCaps="false"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
@@ -28,14 +28,12 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/RecyclerCat"
         android:layout_width="416dp"
-        android:layout_height="570dp"
+        android:layout_height="480dp"
         android:layout_marginTop="5dp"
-        android:layout_marginBottom="3dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.6"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvListaCat"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/tvListaCat" />
 
     <LinearLayout
         android:layout_width="match_parent"
