--- a/app/src/main/res/layout/activity_perfil.xml
+++ b/app/src/main/res/layout/activity_perfil.xml
@@ -49,7 +49,7 @@
         android:layout_width="380dp"
         android:layout_height="40dp"
         android:layout_marginStart="9dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="12dp"
         android:layout_marginEnd="8dp"
         android:text="@string/editarPerfil"
         android:textStyle="bold"
@@ -91,23 +91,25 @@
         android:id="@+id/tvBibliografia"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="44dp"
+        android:layout_marginTop="4dp"
         android:gravity="center"
         android:text="@string/biografiaEjemplo"
         android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editarPerfil" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/RecyclerViewAnuncios"
         android:layout_width="416dp"
-        android:layout_height="340dp"
+        android:layout_height="300dp"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvBibliografia"/>
+        app:layout_constraintTop_toBottomOf="@+id/tvBibliografia"
+        app:layout_constraintVertical_bias="0.64" />
 
     <LinearLayout
         android:id="@+id/linearLayout6"
